@@ -1,8 +1,9 @@
+1975 [OneClick] removed resolution adjustement for AVC level enforcement
 1974 [JobQueue] renamed column "codec" to "encoder"
 1973 [Video Encoding] fixed not applying zones in first pass. Bug #3188275
 1972 [MKV Muxer] fixed non-forced idx subtitle handling
      [MKV Muxer] cosmetics 
-1971 [OneClick] corrected output width if autocrop is disabled
+1971 [OneClick] corrected output height if autocrop is disabled
 1970 [Update] some adjustements
 1969 [Main Window] if video input avs file has also audio included add this file as audio track, too. Feature request #2918470
 1968 [MKV Muxer] added forced track flag for subtitles
